# orca5

./: common.repos  mav.parm  mav.tlog  mav.tlog.raw  mav_0_1.parm  sim.repos
docker/: Dockerfile
orca_bridge/: CMakeLists.txt  package.xml
orca_bridge/scripts/: orbslam_bridge.py  slam.py  slam_bridge.py
orca_bringup/: CMakeLists.txt  package.xml
orca_bringup/config/: left_sim_camera.yaml  right_sim_camera.yaml  sim_camera.yaml  stereo_sim.yaml  sub_6dof.param  sub_vpd.parm
orca_bringup/launch/: bringup.launch.py  hw.launch.py  sim.launch.py  sim_heavy.launch.py
orca_bringup/missions/: box_mission.txt
orca_bringup/models/bluerov2/: model.config  model.sdf
orca_bringup/models/bluerov2_heavy/: model.sdf.in
orca_bringup/models/inpetu_pool/: model.config  model.sdf
orca_bringup/models/inpetu_pool/materials/script/: inpetu_pool.material
orca_bringup/models/inpetu_pool/meshes/: piscina.dae
orca_bringup/models/orca5/: model.sdf.in
orca_bringup/rviz/: hw.rviz  sim.rviz  sim_heavy.rviz
orca_bringup/scripts/: generate_model.py  mission_runner.py
orca_bringup/worlds/: inpetu.world  pnw.world  underwater.world
